# Density

./: README.md  __main__.py  probabilistic_density.py  pyproject.toml  space.py
density/: __init__.py  probabilistic_density.py  space.py
density.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
notebook/: notebook.ipynb
tests/: AB_test.py  attention.py  deep_nn.py  linear.py  lora.py  n_diagonal.py  n_diagonal_test.py  split_transformer_test.py  transformer.py
tests/cubic_transformer/: attention.py  cubic_transformer_test.py  transformer.py
tests/n_diagonal/: linear.py  n_diagonal.py  n_diagonal_test.py
tests/split_transformer/: attention.py  split_transformer_test.py  transformer.py
