[project]
name = "density"
version = "0.1.0"
authors = [
    {name = "Clustery", email = "bigarnaque@gmail.com"}
]
description = "A package made to objectively compare the predicting power of neural network architectures implented with torch."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=24.10.0",
    "matplotlib>=3.10.0",
    "ruff>=0.9.0",
    "torch>=2.5.1",
]

[tool.setuptools.packages.find]
exclude = ["notebook", "notebook.*"]
